# cppCalculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Equation.cpp  Equation.h  Parser.cpp  Parser.h  main.cpp
equationNodes/: Add.cpp  Add.h  Constant.cpp  Constant.h  Divide.cpp  Divide.h  EquationNode.cpp  EquationNode.h  Exponent.cpp  Exponent.h  Multiply.cpp  Multiply.h  Subtract.cpp  Subtract.h  Variable.cpp  Variable.h
